# zenithphoto

./: BUILDING_LINUX.md  BUILDING_WINDOWS.md  Cargo.toml
.github/: copilot-instructions.md
apps/desktop/: Cargo.toml
apps/desktop/src/: config.rs  main.rs
apps/desktop/src/import/: mod.rs  scanner.rs
apps/desktop/src/raw/: decoder.rs  mod.rs  rawloader_backend.rs  rsraw_backend.rs  thumbnail.rs
apps/desktop/ui/: FolioScreen.slint  ImportPhotosScreen.slint  MainTabs.slint  RefineScreen.slint  catalog_dialog.slint  main.slint
core-types/: Cargo.toml
core-types/src/: lib.rs  raw_jpeg.rs
crates/app-settings/: Cargo.toml
crates/app-settings/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/schema/: catalog_schema.sql
crates/catalog/schema/migrations/: 20251123_add_raw_support.sql
crates/catalog/src/: lib.rs  schema.rs
crates/catalog/src/db/: catalog_metadata.rs  collection_images.rs  collections.rs  db.rs  edit_history.rs  edits.rs  folders.rs  image_keywords.rs  images.rs  keywords.rs  migrations.rs  mod.rs  previews.rs  search.rs  thumbnails.rs
crates/catalog/src/services/: catalog_service.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
