[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
engine = { path = "../../crates/engine" }
core-types = { path = "../../core-types" }
catalog = { path = "../../crates/catalog" }
app-settings = { path = "../../crates/app-settings" }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "1.0"

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
