[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "zenithphoto"
path = "src/main.rs"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
engine = { path = "../../crates/engine" }
core-types = { path = "../../core-types" }
catalog = { path = "../../crates/catalog" }
app-settings = { path = "../../crates/app-settings" }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "1.0"
walkdir = "2.5"
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tiff"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }
